# CQL-sans-PLY-YACC

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_PROPOSAL.md  CHANGELOG.md  CONTRIBUTING.md  GUIA_MEJORA_LIBRERIA_PYTHON.md  README copy.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/corpus_query_language/: __init__.py  __main__.py
src/corpus_query_language/core/: __init__.py  core.py
src/corpus_query_language/engine/: __init__.py  engine.py
src/corpus_query_language/language/: __init__.py  grammar.lark  lexer.py  parser.py
src/corpus_query_language/utils/: __init__.py  utils.py
tests/: __init__.py  conftest.py  test_core.py  test_utils.py
